leveldb: Do not reuse manifest on low end devices.

Manifest reuse is beneficial as it reduced database open time, but
it penalizes devices with limited RAM because it defers the database
compaction from db open to when the write log becomes full, which
defaults to 4MB.

Bug: 851006
Change-Id: If4ab6dc683cb745234298545ad9d92cb55c00769
Reviewed-on: https://chromium-review.googlesource.com/1093268
Reviewed-by: Victor Costan <pwnall@chromium.org>
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565810}